<!--
  ~    Copyright 2019 AniTrend
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/preference_group_title_application"
            app:iconSpaceReserved="false"/>

    <SwitchPreference
        app:title="@string/preference_title_refresh_behavior_config"
        app:summary="@string/preference_summary_refresh_behavior_config"
        app:icon="@drawable/ic_sync"
        app:defaultValue="true"
        app:key="@string/settings_refresh_behaviour" />


    <PreferenceCategory
            app:title="@string/preference_group_title_configuration"
            app:allowDividerAbove="true"
            app:iconSpaceReserved="false"/>

    <Preference
            app:title="@string/preference_title_accounts"
            app:summary="@string/preference_summary_accounts"
            app:icon="@drawable/ic_account"
            app:key="@string/preference_key_accounts"
            app:allowDividerBelow="true"/>

    <Preference
            app:title="@string/preference_title_locale"
            app:summary="@string/preference_summary_locale"
            app:icon="@drawable/ic_language"
            app:fragment="co.anitrend.support.crunchyroll.feature.settings.ui.fragment.screens.LocaleContentScreen"/>

    <Preference
            app:title="@string/preference_title_privacy"
            app:summary="@string/preference_summary_privacy"
            app:icon="@drawable/ic_privacy"
            app:fragment="co.anitrend.support.crunchyroll.feature.settings.ui.fragment.screens.PrivacyContentScreen"/>

    <Preference
            app:title="@string/preference_title_storage"
            app:summary="@string/preference_summary_storage"
            app:icon="@drawable/ic_storage"
            app:fragment="co.anitrend.support.crunchyroll.feature.settings.ui.fragment.screens.StorageContentScreen"/>

</androidx.preference.PreferenceScreen>
